# skillcoins_bot

./: README.md  docker-compose.yaml  pyproject.toml
api/auth_api/: pyproject.toml
api/auth_api/src/database/: manager.py  models.py
api/auth_api/src/logic/: auth_logic.py  client_logic.py
api/auth_api/src/settings/: config.py
api/auth_api/src/settings/certs/: jwt-public.pem
src/api/auth_api/: Dockerfile
src/api/auth_api/src/: app.py  pyproject.toml
src/api/auth_api/src/controllers/: auth_controller.py  client_controller.py
src/api/auth_api/src/database/: db.py  models.py  schemas.py
src/api/auth_api/src/settings/: config.py  routers.py
src/api/auth_api/src/settings/certs/: jwt-private.pem
