[tool.poetry]
name = "skillcoins"
version = "0.1.0"
description = ""
authors = ["VladimirLakhtin <vllakhtin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.12.0"
aiogram-dialog = "^2.1.0"
fastapi = "^0.112.2"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
