[tool.poetry]
name = "task-bot"
version = "0.1.0"
description = ""
authors = ["danil <kotikov.lil@bkl.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.4.0"
pydantic = "^2.8.2"
asyncpg = "^0.29.0"
fastapi-jwt-auth = "^0.5.0"
werkzeug = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
